--- a/DueNow/app/src/main/res/values/strings.xml
+++ b/DueNow/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DueNow</string>
+    <string name="task_name">Task One</string>
+    <string name="starting_time">Do on: </string>
+    <string name="deadline">Due: </string>
 </resources>
