--- a/DueNow/app/src/main/res/values/strings.xml
+++ b/DueNow/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
     <string name="task_name">Task One</string>
     <string name="starting_time">Do on: </string>
     <string name="deadline">Due: </string>
+    <string name="title_activity_main">MainActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_main3">Main3Activity</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
