--- a/DueNow/app/src/main/res/values/strings.xml
+++ b/DueNow/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_login">LoginActivity</string>
+
+    <!-- Authentication Methods -->
+    <string name="facebook_app_id">1314374281925406</string>
+    <string name="twitter_app_key">iLf42J99uLUHfbMthMGO8Raz</string>
+    <string name="twitter_app_secret">jdozcdtWekQAQL46ufgAUyUeSLqcVdDFqaz6DpMK5sGI9k8XWx</string>
 </resources>
